--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "keywords": ["school", "admin", "api", "nodejs", "postgresql"],
+  "keywords": [
+    "school",
+    "admin",
+    "api",
+    "nodejs",
+    "postgresql"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1"
+    "pg": "^8.11.3"
   }
 }
